codereview mit Tobi

--- a/src_gui/mainwindow.ui
+++ b/src_gui/mainwindow.ui
@@ -55,8 +55,8 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>183</width>
-         <height>605</height>
+         <width>185</width>
+         <height>607</height>
         </rect>
        </property>
       </widget>
@@ -118,8 +118,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>533</width>
-            <height>396</height>
+            <width>535</width>
+            <height>398</height>
            </rect>
           </property>
          </widget>
@@ -327,5 +327,22 @@
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>actionLoad</sender>
+   <signal>triggered()</signal>
+   <receiver>actionLoad</receiver>
+   <slot>trigger()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>499</x>
+     <y>349</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
