--- a/src_gui/mainwindow.ui
+++ b/src_gui/mainwindow.ui
@@ -55,8 +55,8 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>184</width>
-         <height>607</height>
+         <width>183</width>
+         <height>605</height>
         </rect>
        </property>
       </widget>
@@ -118,8 +118,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>534</width>
-            <height>402</height>
+            <width>533</width>
+            <height>396</height>
            </rect>
           </property>
          </widget>
@@ -226,7 +226,7 @@
      <x>0</x>
      <y>0</y>
      <width>1000</width>
-     <height>20</height>
+     <height>25</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -263,6 +263,7 @@
     <property name="title">
      <string>Properties</string>
     </property>
+    <addaction name="separator"/>
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuTools"/>
@@ -331,6 +332,11 @@
   <action name="actionLevel_Of_Detail">
    <property name="text">
     <string>Level Of Detail</string>
+   </property>
+  </action>
+  <action name="actionSetFrameworkPath">
+   <property name="text">
+    <string>SetFrameworkPath</string>
    </property>
   </action>
  </widget>
