Implemented SettingsHandler, integrated Toolbar part (set framework path) to change framework path persistently.
Please check out SettingsHandler for including new settings to store
persistently.

Settings are gonna be initialized when GUI starts

--- a/src_gui/mainwindow.ui
+++ b/src_gui/mainwindow.ui
@@ -264,6 +264,7 @@
      <string>Properties</string>
     </property>
     <addaction name="separator"/>
+    <addaction name="actionSet_framework_path"/>
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuTools"/>
@@ -337,6 +338,11 @@
   <action name="actionSetFrameworkPath">
    <property name="text">
     <string>SetFrameworkPath</string>
+   </property>
+  </action>
+  <action name="actionSet_framework_path">
+   <property name="text">
+    <string>Set framework path...</string>
    </property>
   </action>
  </widget>
