icons able to drag but not to drop

--- a/src_gui/mainwindow.ui
+++ b/src_gui/mainwindow.ui
@@ -50,7 +50,7 @@
       <property name="widgetResizable">
        <bool>true</bool>
       </property>
-      <widget class="QWidget" name="nodeCatalogContent">
+      <widget class="DragWidget" name="nodeCatalogContent">
        <property name="geometry">
         <rect>
          <x>0</x>
@@ -59,13 +59,7 @@
          <height>607</height>
         </rect>
        </property>
-       <layout class="QHBoxLayout" name="horizontalLayout_2">
-        <item>
-         <widget class="QFrame" name="">
-          <layout class="QVBoxLayout" name="verticalLayout_5"/>
-         </widget>
-        </item>
-       </layout>
+       <layout class="QHBoxLayout" name="horizontalLayout_2"/>
       </widget>
      </widget>
     </item>
@@ -393,6 +387,14 @@
   </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
+ <customwidgets>
+  <customwidget>
+   <class>DragWidget</class>
+   <extends>QWidget</extends>
+   <header>dragwidget.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections>
   <connection>
