--- a/src_gui/mainwindow.ui
+++ b/src_gui/mainwindow.ui
@@ -150,6 +150,7 @@
              <property name="acceptDrops">
               <bool>true</bool>
              </property>
+             <zorder>buttonBox</zorder>
             </widget>
            </item>
           </layout>
