--- a/src_gui/mainwindow.ui
+++ b/src_gui/mainwindow.ui
@@ -82,7 +82,7 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>674</width>
+            <width>629</width>
             <height>63</height>
            </rect>
           </property>
@@ -132,19 +132,6 @@
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="pushButton_4">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="text">
-            <string>PushButton</string>
-           </property>
-          </widget>
-         </item>
-         <item>
           <widget class="QPushButton" name="pushButton">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -158,21 +145,22 @@
           </widget>
          </item>
          <item>
-          <widget class="QGroupBox" name="spacer">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
+          <spacer name="spacer">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
            </property>
-           <property name="minimumSize">
+           <property name="sizeHint" stdset="0">
             <size>
-             <width>0</width>
-             <height>50</height>
+             <width>40</width>
+             <height>20</height>
             </size>
            </property>
-           <property name="title">
-            <string/>
+          </spacer>
+         </item>
+         <item>
+          <widget class="QCheckBox" name="details">
+           <property name="text">
+            <string>Show Details</string>
            </property>
           </widget>
          </item>
@@ -215,8 +203,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>661</width>
-            <height>285</height>
+            <width>616</width>
+            <height>313</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_4">
@@ -374,7 +362,7 @@
      <x>0</x>
      <y>0</y>
      <width>1000</width>
-     <height>25</height>
+     <height>24</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
