--- a/src_gui/mainwindow.ui
+++ b/src_gui/mainwindow.ui
@@ -162,6 +162,9 @@
            <property name="text">
             <string>Show Details</string>
            </property>
+           <property name="checked">
+            <bool>true</bool>
+           </property>
           </widget>
          </item>
         </layout>
