added layout to nodecatalog(gridlayout), fixed label in catalog, fixed static_cast bug by using dynamic_cast

--- a/src_gui/mainwindow.ui
+++ b/src_gui/mainwindow.ui
@@ -95,7 +95,7 @@
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
-          <layout class="QHBoxLayout" name="horizontalLayout_2"/>
+          <layout class="QGridLayout" name="CatalogLayout"/>
          </widget>
         </widget>
        </item>
