--- a/src_gui/mainwindow.ui
+++ b/src_gui/mainwindow.ui
@@ -34,7 +34,7 @@
       </property>
       <layout class="QVBoxLayout" name="verticalLayout">
        <property name="spacing">
-        <number>0</number>
+        <number>3</number>
        </property>
        <property name="leftMargin">
         <number>0</number>
@@ -48,6 +48,13 @@
        <property name="bottomMargin">
         <number>30</number>
        </property>
+       <item>
+        <widget class="QLabel" name="label_2">
+         <property name="text">
+          <string>Nodecatalog:</string>
+         </property>
+        </widget>
+       </item>
        <item>
         <widget class="QScrollArea" name="Node_Catalog">
          <property name="sizePolicy">
@@ -85,7 +92,7 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>629</width>
+            <width>624</width>
             <height>63</height>
            </rect>
           </property>
@@ -97,6 +104,13 @@
           </property>
           <layout class="QGridLayout" name="CatalogLayout"/>
          </widget>
+        </widget>
+       </item>
+       <item>
+        <widget class="Line" name="line_2">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
         </widget>
        </item>
        <item>
@@ -141,19 +155,6 @@
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="pushButton">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="text">
-            <string>PushButton</string>
-           </property>
-          </widget>
-         </item>
-         <item>
           <spacer name="spacer">
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
@@ -179,9 +180,23 @@
         </layout>
        </item>
        <item>
+        <widget class="Line" name="line">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="label">
+         <property name="text">
+          <string>Mesheditor:</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <widget class="QScrollArea" name="mesh_edt_area">
          <property name="sizePolicy">
-          <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
+          <sizepolicy hsizetype="MinimumExpanding" vsizetype="Maximum">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
@@ -215,8 +230,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>616</width>
-            <height>313</height>
+            <width>611</width>
+            <height>285</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_4">
@@ -374,7 +389,7 @@
      <x>0</x>
      <y>0</y>
      <width>1000</width>
-     <height>24</height>
+     <height>25</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -420,14 +435,6 @@
    <addaction name="menuView"/>
    <addaction name="menuHelp"/>
    <addaction name="menuProperties"/>
-  </widget>
-  <widget class="QToolBar" name="mainToolBar">
-   <attribute name="toolBarArea">
-    <enum>TopToolBarArea</enum>
-   </attribute>
-   <attribute name="toolBarBreak">
-    <bool>false</bool>
-   </attribute>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <action name="actionSave">
