--- a/src_gui/mainwindow.ui
+++ b/src_gui/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1000</width>
-    <height>738</height>
+    <height>763</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -196,7 +196,7 @@
        <item>
         <widget class="QScrollArea" name="mesh_edt_area">
          <property name="sizePolicy">
-          <sizepolicy hsizetype="MinimumExpanding" vsizetype="Maximum">
+          <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
@@ -239,6 +239,12 @@
             <widget class="MeshEditorWidget" name="meshField" native="true">
              <property name="enabled">
               <bool>true</bool>
+             </property>
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Ignored" vsizetype="Ignored">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
              </property>
              <property name="mouseTracking">
               <bool>true</bool>
