--- a/src_gui/mainwindow.ui
+++ b/src_gui/mainwindow.ui
@@ -420,7 +420,6 @@
      <string>Tools</string>
     </property>
     <addaction name="actionDelete"/>
-    <addaction name="actionAdd_Connection"/>
     <addaction name="actionSort_Mesh"/>
     <addaction name="actionRun_Mesh"/>
     <addaction name="actionStop_Simulation"/>
@@ -430,13 +429,6 @@
      <string>Help</string>
     </property>
     <addaction name="actionAbout"/>
-    <addaction name="actionShortcuts"/>
-   </widget>
-   <widget class="QMenu" name="menuView">
-    <property name="title">
-     <string>View</string>
-    </property>
-    <addaction name="actionLevel_Of_Detail"/>
    </widget>
    <widget class="QMenu" name="menuProperties">
     <property name="title">
@@ -447,9 +439,8 @@
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuTools"/>
-   <addaction name="menuView"/>
-   <addaction name="menuHelp"/>
    <addaction name="menuProperties"/>
+   <addaction name="menuHelp"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <action name="actionSave">
@@ -483,6 +474,9 @@
    <property name="text">
     <string>New...</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+N</string>
+   </property>
   </action>
   <action name="actionDelete">
    <property name="text">
@@ -497,6 +491,9 @@
   <action name="actionAbout">
    <property name="text">
     <string>About</string>
+   </property>
+   <property name="shortcut">
+    <string>F1</string>
    </property>
   </action>
   <action name="actionShortcuts">
@@ -548,6 +545,9 @@
   <action name="actionStop_Simulation">
    <property name="text">
     <string>Stop Simulation</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+X</string>
    </property>
   </action>
  </widget>
