--- a/src_gui/mainwindow.ui
+++ b/src_gui/mainwindow.ui
@@ -58,14 +58,14 @@
        <item>
         <widget class="QLabel" name="label_2">
          <property name="text">
-          <string>Nodecatalog:</string>
+          <string/>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QGroupBox" name="Nodes_GroupBox">
          <property name="sizePolicy">
-          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+          <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
@@ -78,12 +78,12 @@
            <rect>
             <x>166</x>
             <y>-3</y>
-            <width>461</width>
+            <width>417</width>
             <height>78</height>
            </rect>
           </property>
           <property name="sizePolicy">
-           <sizepolicy hsizetype="Expanding" vsizetype="Minimum">
+           <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
@@ -100,14 +100,14 @@
           <property name="styleSheet">
            <string notr="true">background-color: rgb(255, 255, 255);</string>
           </property>
+          <property name="frameShape">
+           <enum>QFrame::StyledPanel</enum>
+          </property>
           <property name="verticalScrollBarPolicy">
            <enum>Qt::ScrollBarAlwaysOff</enum>
           </property>
           <property name="horizontalScrollBarPolicy">
            <enum>Qt::ScrollBarAlwaysOn</enum>
-          </property>
-          <property name="sizeAdjustPolicy">
-           <enum>QAbstractScrollArea::AdjustToContents</enum>
           </property>
           <property name="widgetResizable">
            <bool>true</bool>
@@ -117,7 +117,7 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>459</width>
+             <width>415</width>
              <height>63</height>
             </rect>
            </property>
@@ -140,10 +140,14 @@
            </rect>
           </property>
           <property name="styleSheet">
-           <string notr="true">background:rgb(255, 255, 255);</string>
+           <string notr="true">background:transparent;
+outline:none;</string>
           </property>
           <property name="verticalScrollBarPolicy">
-           <enum>Qt::ScrollBarAlwaysOn</enum>
+           <enum>Qt::ScrollBarAlwaysOff</enum>
+          </property>
+          <property name="horizontalScrollBarPolicy">
+           <enum>Qt::ScrollBarAlwaysOff</enum>
           </property>
           <property name="widgetResizable">
            <bool>true</bool>
@@ -153,22 +157,45 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>126</width>
+             <width>139</width>
              <height>76</height>
             </rect>
            </property>
-           <widget class="QListWidget" name="NodeCategories_List">
+           <widget class="QTreeWidget" name="NodeCategories_List">
+            <property name="enabled">
+             <bool>true</bool>
+            </property>
             <property name="geometry">
              <rect>
               <x>0</x>
               <y>0</y>
               <width>141</width>
-              <height>181</height>
+              <height>141</height>
              </rect>
             </property>
-            <property name="styleSheet">
-             <string notr="true">color:#000000;</string>
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
             </property>
+            <property name="styleSheet">
+             <string notr="true">background:rgb(255, 255, 255);</string>
+            </property>
+            <property name="verticalScrollBarPolicy">
+             <enum>Qt::ScrollBarAlwaysOn</enum>
+            </property>
+            <property name="horizontalScrollBarPolicy">
+             <enum>Qt::ScrollBarAlwaysOn</enum>
+            </property>
+            <property name="sizeAdjustPolicy">
+             <enum>QAbstractScrollArea::AdjustToContents</enum>
+            </property>
+            <column>
+             <property name="text">
+              <string>Node Catalog</string>
+             </property>
+            </column>
            </widget>
           </widget>
          </widget>
@@ -328,6 +355,9 @@
        </item>
        <item>
         <widget class="QTabWidget" name="tabWidget">
+         <property name="enabled">
+          <bool>true</bool>
+         </property>
          <property name="sizePolicy">
           <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
            <horstretch>0</horstretch>
@@ -353,9 +383,12 @@
           <bool>true</bool>
          </property>
          <property name="currentIndex">
-          <number>1</number>
+          <number>0</number>
          </property>
          <widget class="QWidget" name="console_tab">
+          <property name="enabled">
+           <bool>true</bool>
+          </property>
           <attribute name="title">
            <string>Console</string>
           </attribute>
